# Telemetry-Usi2024

./: .gitignore  LICENSE  README.md
.cache/clangd/index/: adddialog.cpp.2110491DEA93089A.idx  adddialog.h.5FA4CA4D4C1C8A9D.idx  addresswidget.cpp.E07F3336F45ED37F.idx  addresswidget.h.1F32D3395E36F479.idx  dialog.cpp.3F34DAA1BAACEC0C.idx  dialog.h.35EAA6D27D9A0C52.idx  main.cpp.6F1B46FA7DB7A88A.idx  mainwindow.cpp.ABD7DD7FABEE44FE.idx  mainwindow.h.BC35D84072CB58CE.idx  myQApp.cpp.5809C826BC55E074.idx  myQApp.h.C55F1D59ECFE9A62.idx  newaddresstab.cpp.A61625EF2F5793D3.idx  newaddresstab.h.7E176419FA195EDD.idx  tablemodel.cpp.3689960BE78A5079.idx  tablemodel.h.693FC63228FD461C.idx  telemetry.cpp.73E1F2D1CB122393.idx  telemetry.h.8C59D3FB2C5BD550.idx
.github/workflows/: docker-testing.yml
client-app/: CMakeLists.txt  adddialog.cpp  adddialog.h  addresswidget.cpp  addresswidget.h  dialog.cpp  dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  myQApp.cpp  myQApp.h  newaddresstab.cpp  newaddresstab.h  tablemodel.cpp  tablemodel.h  telemetry.cpp  telemetry.h
client-app/libs/: CMakeLists.txt  mac_install_name_tool.sh.in  mac_setenv.sh.in
client-app/libs/kde/: CMakeLists.txt
client-app/libs/kde/KUserFeedback/: CMakeLists.txt
client-app/libs/zlib/: CMakeLists.txt
server/: .gitignore  Dockerfile  NOTES.MD  README.md  docker-compose.yml  example.env  grafana-dashboard.json  mock_data.sql  php.ini
server/console_schemas/: colorSchema
server/console_schemas/banana/: banana.schema  banana.surveys
server/data/: transformer.py
server/grafana/provisioning/dashboards/: logs.json  pd_banana.json  pd_old_version.json
server/grafana/provisioning/datasources/: KUserFeedback.yml
server/mysql_entrypoint_scripts/: 0_grafana.sh  user_feedback.sql
server/server/: .htpasswd
server/server/admin/: .htaccess
server/server/analytics/: .htaccess
server/server/config/: localconfig.php
server/server/shared/: datastore.php  receiver.php
server/src/: Dockerfile
server/src/server/data/: db.sqlite
